chore: Update imports to use @kencrocken/colorful-loader in README.md and colorfulLoader.mdx

--- a/src/Loader/__docs__/colorfulLoader.mdx
+++ b/src/Loader/__docs__/colorfulLoader.mdx
@@ -16,7 +16,7 @@ A colorful loader component for React.
 #### With defaults
 
 ```ts
-import { ColorfulLoader } from "colorfulLoader";
+import { ColorfulLoader } from "@kencrocken/colorful-loader";
 
 const Example = () => {
   return (
@@ -45,7 +45,7 @@ export default Example;
 #### Customized
 
 ```ts
-import { ColorfulLoader } from "colorfulLoader";
+import { ColorfulLoader } from "@kencrocken/colorful-loader";
 
 const Example = () => {
   const colors = ["#FF0000", "#00FF00", "#0000FF"];
